# ccxx-template

./: CMakeLists.txt  CMakePresets.json
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
src/: main.cpp
